Added new saving goal fetures